<resources>
    <string name="app_name" translatable="false">Menagerie</string>
    <string name="search_text_hint">Search for tags</string>
    <string name="image_preview_content_desc">preview of image</string>
    <string name="prompt_address">Address</string>
    <string name="action_connect">Connect</string>
    <string name="menagerie_icon">menagerie icon</string>
    <string name="cd_item_thumbnail">item thumbnail</string>
    <string name="cd_preview_of_item_image">preview of item image</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="cd_group_icon">group icon</string>
    <string name="cd_video_icon">video icon</string>
    <string name="tags_activity_label">Tags</string>
    <string name="item_info_title">Item Info</string>
    <string name="toolbar_download">Download</string>
    <string name="toolbar_share">Share</string>
    <string name="toolbar_forget">Forget</string>
    <string name="toolbar_delete">Delete</string>
    <string name="cd_error_icon">error icon</string>
</resources>
