<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/toolbar_download"
        android:icon="@drawable/ic_file_download_white_24dp"
        android:title="@string/toolbar_download"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/toolbar_share"
        android:icon="@drawable/ic_share_white_24dp"
        android:title="@string/toolbar_share"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/toolbar_forget"
        android:title="@string/toolbar_forget"
        app:showAsAction="never" />

    <item
        android:id="@+id/toolbar_delete"
        android:title="@string/toolbar_delete"
        app:showAsAction="never" />

</menu>